# aipy

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  PKG-INFO  README  README.md  VERSION  \  __init__.py  ant.py  antennas.py  ants.py  branches.txt  const.py  constants.py  coord.py  deconv.py  eor.py  ez_setup.py  fit.py  generic_task.sh  img.py  install_dependencies.sh  install_recommended.sh  install_required.sh  loc.py  params.py  pwa303.py  pyproject.toml  requirements.txt  rfi.py  setup.ez  setup.py  sim.py  src.py  (+1 more)
.github/: release-drafter.yml
aipy/: __branch__.py  __gitlog__.py  __init__.py  _version.py  amp.py  ant.py  cal.py  const.py  coord.py  deconv.py  eor.py  fit.py  healpix.py  img.py  interp.py  miriad.py  rfi.py  scripting.py  sim.py
aipy.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  native_libs.txt  requires.txt  top_level.txt
aipy_src/: __gitlog__.py  __init__.py  __version__.py  amp.py  cal.py  const.py  coord.py  deconv.py  dsp.py  fit.py  healpix.py  img.py  interp.py  map.py  miriad.py  phs.py  pol.py  rfi.py  scripting.py  src.py  twodgauss.py
catalogTests/: parkes_test.py  wenss_test.py
ci/: test_environment.yml
data/: Receiver_Gain.txt  fit_receiver_gain.py
doc/: LFBGSB_README  Makefile  aipy.aux  aipy.dvi  aipy.tex  aipy.toc  ant.tex  biblio.bib  coord.tex  deconv.tex  fit.tex  healpix.tex  img.tex  lbfgsb_algorithm.ps  lbfgsb_code.ps  lbfgsb_compact.ps  loc.tex  map.tex  miriad.tex  py2tex.sty  rfi.tex  scripting.tex  sim.tex  src.tex
healpix/: __init__.py  healpix.py  (+2 more)
(+449 files in other folders)
